@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho


class TableTypeController {
    - _tableTypeRepository: ITableTypeRepository
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<IActionResult>
}

interface ITableTypeRepository<<interface>> {
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<GetTableTypeResponseDTO>
}

class TableTypeRepository {
    - _tableTypeDao: TableTypeDAO
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<GetTableTypeResponseDTO>
}

class TableTypeDAO {
    - _client: Client
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<GetTableTypeResponseDTO>
}
class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}


TableTypeController -- ITableTypeRepository
ITableTypeRepository <|-- TableTypeRepository
TableTypeRepository -- TableTypeDAO
TableTypeDAO -- TableType
@enduml
